# acoj

./: .air.toml  .async_migration_spec.md  .dockerignore  .env  .env.example  .flake8  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  REFACTOR-PLAN.md  alembic.ini  codegen  config.example.yaml  config.yaml  entrypoint.sh  eslint.config.js  go.mod  go.sum  go.work  go.work.sum  gunicorn.conf.py  index.html  loading-test.md  main.go  main.py  oj-test-data-2026-03-08T10-42-12-415Z.json  oj-test-data-2026-03-08T10-47-00-037Z.json  oj-text-summary-2026-03-08T10-42-12-415Z.txt  oj-text-summary-2026-03-08T10-47-00-037Z.txt  package.json  pnpm-lock.yaml  pyproject.toml  requirements-prod.txt  requirements.txt  test_group.txt  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  deploy.yml  deploy.yml.back
_fix/: main.go
_k6_test/: 1_generate_users.py  2_register_users.py  README.md  generate_charts.py  generate_report.py  performance_summary.csv  performance_summary.txt  performance_test.js  performance_test_results.json  test_users.csv
_k6_test/codes/: 1985678530483163137.cpp
_k6_test/register_results_20260125_153856/: performance_report.txt  注册结果.csv
admin-vue/: .gitignore  README.md  index.html  package.json  uno.config.ts
api/: auth.go  event.go  go.mod  log.go  middleware.go  module.go  plugin.go  registry.go  router.go  storage.go  user.go
api/hello/: hello.go
app/: factory.py  go.mod  go.sum  lifespan.py  main.go  main.py
cli/: __init__.py  codegen.py  migrate.py
config/: config.go  settings.py
core/: app.go  health.go  router.go
design/: universal-auth-package-design.md
docs/: Command.md  Git 两个独立仓库长期合并文档.md  admin-vue-subtree-guide.md  comprehensive-review.md  iam.md  im-redesign.md  migration.md  plan-client-modules.md  plan-port-fastapi-modules.md  plan-sys-modules-phase2.md  plan-sys-modules.md  plugin-judge-plan.md  移植计划.md
ent/: client.go  clientuser.go  clientuser_create.go  clientuser_delete.go  clientuser_query.go  clientuser_update.go  ent.go  generate.go  mutation.go  relorgrole.go  relorgrole_create.go  relorgrole_delete.go  relorgrole_query.go  relorgrole_update.go  relrolepermission.go  relrolepermission_create.go  relrolepermission_delete.go  relrolepermission_query.go  relrolepermission_update.go  relroleresource.go  relroleresource_create.go  relroleresource_delete.go  relroleresource_query.go  relroleresource_update.go  reluserpermission.go  reluserpermission_create.go  reluserpermission_delete.go  reluserpermission_query.go  reluserpermission_update.go  reluserrole.go  reluserrole_create.go  reluserrole_delete.go  reluserrole_query.go  reluserrole_update.go  runtime.go  sysbanner.go  sysbanner_create.go  sysbanner_delete.go  sysbanner_query.go  sysbanner_update.go  (+71 more)
galaxy-oj/: Dockerfile
judge/: hack.go
judge-service/: readme.md
migrations/: README.md  env.py  script.py.mako
plugins/: __init__.py  assembly.py
scripts/: acoj_backup.sql  check_migration.py  check_migration.sh  dev.py  hei_data.sql  hei_fastapi_backup.sql  lint.py  lint.sh  makemigration.py  makemigration.sh  migrate.py  oj_admin_menu_increment.sql  rebuild_initial_migration.py  seed_super_admin.py  sys_dict.sql  sys_resource.sql  test.py  test.sh
sdk/: __init__.py  go.mod  go.sum
similarity-service/: Dockerfile
sql/: astro_code_05.sql
src/: App.vue  main.ts
tests/: conftest.py  iam_relation_helpers.py  test_auth_realm.py  test_auth_username_logic.py  test_client_user_service_async.py  test_file_service_parity.py  test_health.py  test_im_message_service_parity.py  test_lifespan_validation.py  test_permission_scan.py  test_plugin_loader.py  test_realm_path_inference.py  test_settings_production.py  test_user_role_service_parity.py
utility/: excel.go  ip.go  page.go  response.go  sm2.go  snowflake.go  string.go  trace.go  useragent.go
vitepress/: package.json  pnpm-lock.yaml
web/: admin.rar  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
(+3073 files in other folders)
