[project]
name = "hei-fastapi"
version = "0.1.0"
description = "Large-scale FastAPI scaffold with async stack, RBAC, multi-user-system, depts and groups."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Charlie" }
]
dependencies = [
  "alembic>=1.16.0",
  "boto3>=1.39.0",
  "celery>=5.5.0",
  "cryptography>=45.0.0",
  "fastapi>=0.116.0",
  "greenlet>=3.2.0",
  "httpx>=0.28.0",
  "opentelemetry-api>=1.36.0",
  "opentelemetry-exporter-otlp>=1.36.0",
  "opentelemetry-instrumentation-fastapi>=0.57b0",
  "opentelemetry-instrumentation-httpx>=0.57b0",
  "opentelemetry-instrumentation-sqlalchemy>=0.57b0",
  "opentelemetry-sdk>=1.36.0",
  "orjson>=3.10.0",
  "oss2>=2.19.0",
  "bcrypt>=5.0.0",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.10.0",
  "prometheus-client>=0.22.0",
  "python-multipart>=0.0.20",
  "pika>=1.3.2",
  "redis>=6.2.0",
  "sqlalchemy>=2.0.41",
  "snowflake-id>=1.0.2",
  "uvicorn[standard]>=0.35.0",
]

[project.optional-dependencies]
mysql = [
  "aiomysql>=0.2.0",
  "asyncmy>=0.2.10",
]
postgres = [
  "asyncpg>=0.30.0",
]
sqlite = [
  "aiosqlite>=0.21.0",
]
dev = [
  "aiosqlite>=0.21.0",
  "asyncpg>=0.30.0",
  "fakeredis>=2.30.0",
  "mypy>=1.16.0",
  "pytest>=8.4.0",
  "pytest-asyncio>=1.0.0",
  "pytest-html>=4.1.0",
  "ruff>=0.12.0",
]

[project.scripts]
hei-fastapi = "app.main:main"

[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_configs = true
warn_return_any = true
